2007-12-19  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Implement dashed lines. Extend color support to
	include TC_LT. Assign color and dash attributes to individual paths,
	rather than inheriting them from the style of the surrounding group
	environment. 

2007-12-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h (STORE_WITH_LOG_AND_UPDATE_RANGE): Add a new parameter
	that turns off autoscaling on a per-plot basis rather than per-axis.

	* src/datafile.c src/graph3d.h src/graphics.c src/graphics.h
	src/interpol.c src/plot2d.c src/plot3d.c: Corresponding modification
	to all the call sites.

	* src/graphics.c (do_plot recheck_ranges): Before drawing the plots,
	fill in the INRANGE/OUTRANGE flags for plots with noautoscale set.

	* src/datafile.c (df_open): Parse "noautoscale" keyword.

2007-12-17  Lars Hecking  <lhecking@users.sourceforge.net>

	* share/Makefile.am: Gnuplot is generated by make and deleted by
	'make clean'. Bring variable names in line with xorg.

2007-12-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (int_error): Fix incorrect handling of va_list.

	* src/datafile.c: Call add_tic_user with a tick type of -1 (a new flag
	value) rather than 0 (major tick).  This allows to distinguish between
	tick labels read from a data file and those entered from the
	command line.

	* src/axis.c (gen_tics): Treat tick type -1 the same as major ticks.

2007-12-14  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Increase the chance that ./configure will correctly
	find all the pieces of gnu libreadline under OSX 1.4.

	* src/plot3d.c src/graph3d.c src/graph3d.h:
	Make 3D code use the same mechanism as 2D (plot->title_is_suppressed)
	to control whether a key title is generated. 

2007-12-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary):  Missing "else" in bounds calculation.
	Also fix trivial typo of v_char instead of h_char.
